Выравнивания и изменения шрифтов

--- a/page.html
+++ b/page.html
@@ -52,7 +52,7 @@
     <code style="white-space: pre; letter-spacing:5px;" >
 
         <div>
-        <div class="list"> <h1 class="div" style="text-shadow: greenyellow 3px 3px 0;">Топ 5 мест в центральном Сочи</h1><ol>
+        <div class="list"> <h1 class="headline_1">Топ 5 мест в центральном Сочи</h1><ol>
             <li>Рыжий пляж</li>
             <li>ТРЦ МореМолл</li>
             <li>Парк Ривьера</li>
@@ -89,9 +89,9 @@
                 <p>text3</p>
             </article>
             <aside class="row row-column border">
-                <div class="border banner">Реклама 1</div>
+                <div class="border banner">Отели</div>
 
-                <div class="border banner">Реклама 2</div>
+                <div class="border banner">Рестораны</div>
             </aside>
         </main>
         <footer class="border" id="footer">
