Hovering image attempt with error

--- a/page.html
+++ b/page.html
@@ -52,18 +52,20 @@
     <code style="white-space: pre; letter-spacing:5px;" >
 
         <div>
-        <div class="list"> <h1 class="headline_1">Топ 5 мест в центральном Сочи</h1><ol>
+        <div class="list"> <h1 id="headline_1">Топ 5 мест в центральном Сочи</h1><ol>
             <li>Рыжий пляж</li>
             <li>ТРЦ МореМолл</li>
             <li>Парк Ривьера</li>
             <li>Морской порт</li>
-            <li>Дендрарий</li>
+            <li>Дендрарий <div id="park_photo">
+                <a id="park" href="#"><img src="photo_2023-08-20_22-42-23.jpg" alt=""><span><img src="photo_2023-08-20_22-42-23.jpg" alt=""></span></a>
+            </div> </li>
 
         </ol>
              </div>
 
-        <div>Блок 2</div>
-        <div>Блок 3</div> 
+        <div class="block"></div>
+        <div class="block"></div> 
         </div>
     </code>
 </div>
