--- a/page.html
+++ b/page.html
@@ -57,8 +57,8 @@
             <li>ТРЦ МореМолл</li>
             <li>Парк Ривьера</li>
             <li>Морской порт</li>
-            <li>Дендрарий <div id="park_photo">
-                <a id="park" href="#"><img src="photo_2023-08-20_22-42-23.jpg" alt=""><span><img src="photo_2023-08-20_22-42-23.jpg" alt=""></span></a>
+            <li>Дендрарий  ↓  ↓  ↓<div id="park_photo">
+                <a id="park" href="#"><img src="photo_2023-08-20_22-42-23-small.jpg" alt=""><span><img src="photo_2023-08-20_22-42-23.jpg" alt=""></span></a>
             </div> </li>
 
         </ol>
