--- a/page.html
+++ b/page.html
@@ -43,8 +43,9 @@
                 <a href="" class="link-beautiful">Просто ссылка</a>
                 <p>Сочи&mdash;место с одним из самых благоприятных климатов в России.
 
-                </p>Делится он на много районов<p>Сегодня мы рассматриваем центральный район</p>
-                <p></p>
+                </p>
+                <p>Делится он на много районов</p>
+                <p>Сегодня мы рассматриваем центральный район</p>
                 <p>Взгляните на список моих любимых мест:</p>
 
             </article>
@@ -57,20 +58,19 @@
             <li>ТРЦ МореМолл</li>
             <li>Парк Ривьера</li>
             <li>Морской порт</li>
-            <li>Дендрарий  ↓  ↓  ↓<div id="park_photo">
-                <a id="park" href="#"><img style="width:80px;" src="photo_2023-08-20_22-42-23.jpg" alt=""><span><img src="photo_2023-08-20_22-42-23.jpg" alt=""></span></a>
-            </div> </li>
+            <li>Дендрарий  </li>
 
         </ol>
              </div>
 
-        <div class="block"></div>
-        <div class="block"></div> 
-        </div>
+        <figure id="park_photo">
+            <figure id="park" href="Дендрарий2023"><img style="width:150px;" src="photo_2023-08-20_22-42-23.jpg" alt="Дендрарий"><span><img src="photo_2023-08-20_22-42-23.jpg" alt="ДендрарийLarge"></span></figure>
+            <figcaption style="text-align: right;">Дендрарий, 2023</figcaption>
+        </figure>
     </code>
             </div>
 
-            <table style="width: 500px; height:500px ;"></table>
+            <table></table>
 
         </main>
         <footer class="border" id="footer">
