--- a/page.html
+++ b/page.html
@@ -47,6 +47,11 @@
                 <p>Делится он на много районов</p>
                 <p>Сегодня мы рассматриваем центральный район</p>
                 <p>Взгляните на список моих любимых мест:</p>
+                <hr>
+                <div style="padding: 40px; text-align: center; font-size: medium;">
+                    <p>Место для рекламы</p>
+
+                </div>
 
             </article>
             <div style="border: 1px solid black;">
